# waldur-site-agent

./: .dockerignore  .dockleignore  .flake8  .gitignore  .gitlab-ci.yml  .osv-scanner.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.waldur-storage-proxy  LICENCE  LICENCE.md  README.md  config-components.yaml  config-components.yaml.example  index.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  waldur-site-agent-config.yaml.example
ci/: docker-compose.e2e.yml  (+10 more)
docs/plugin-template/: pyproject.toml
docs/plugin-template/tests/: conftest.py  test_backend.py
docs/plugin-template/waldur_site_agent_mycustom/: __init__.py  backend.py  client.py  schemas.py
plugins/basic_username_management/: README.md  pyproject.toml
plugins/basic_username_management/waldur_site_agent_basic_username_management/: backend.py
plugins/croit-s3/: README.md  pyproject.toml
plugins/croit-s3/tests/: test_backend.py  test_client.py
plugins/croit-s3/waldur_site_agent_croit_s3/: __init__.py  backend.py  client.py  exceptions.py
plugins/cscs-dwdi/: README.md  pyproject.toml
plugins/cscs-dwdi/tests/: test_cscs_dwdi.py
plugins/cscs-dwdi/waldur_site_agent_cscs_dwdi/: __init__.py  backend.py  client.py
plugins/cscs-hpc-storage/: README.md  pyproject.toml
plugins/cscs-hpc-storage/tests/: test_api_hierarchical.py  test_config.yaml  test_cscs_backend.py  test_hierarchical_storage.py  test_hpc_user_client.py  test_storage_proxy.py  test_sync_script.py
plugins/cscs-hpc-storage/waldur_site_agent_cscs_hpc_storage/: __init__.py  backend.py  hpc_user_client.py  sync_script.py
plugins/cscs-hpc-storage/waldur_site_agent_cscs_hpc_storage/waldur_storage_proxy/: __init__.py  config.py  main.py
plugins/digitalocean/: README.md  pyproject.toml
plugins/digitalocean/tests/: test_digitalocean_backend.py  test_digitalocean_client.py
plugins/digitalocean/waldur_site_agent_digitalocean/: __init__.py  backend.py  client.py  schemas.py
plugins/harbor/: README.md  pyproject.toml
plugins/harbor/tests/: test_harbor_backend.py  test_harbor_client.py  test_integration.py
plugins/harbor/waldur_site_agent_harbor/: __init__.py  backend.py  client.py  exceptions.py
plugins/k8s-ut-namespace/: README.md  pyproject.toml
plugins/k8s-ut-namespace/tests/: conftest.py  test_backend.py  test_k8s_client.py  test_role_mapping.py
plugins/k8s-ut-namespace/waldur_site_agent_k8s_ut_namespace/: __init__.py  backend.py  k8s_client.py
plugins/keycloak-client/: pyproject.toml
plugins/keycloak-client/waldur_site_agent_keycloak_client/: __init__.py  keycloak_client.py
plugins/ldap/: README.md  pyproject.toml
plugins/ldap/examples/: welcome-email.html.j2  welcome-email.txt.j2
plugins/ldap/tests/: test_email_sender.py
plugins/ldap/waldur_site_agent_ldap/: __init__.py  backend.py  client.py  email_sender.py  schemas.py
plugins/luna-hsm/: README.md  pyproject.toml
plugins/luna-hsm/waldur_site_agent_luna_hsm/: __init__.py  backend.py  client.py  storage.py
plugins/moab/: README.md  pyproject.toml
plugins/moab/waldur_site_agent_moab/: __init__.py  backend.py  client.py  parser.py
plugins/mup/: README.md  pyproject.toml
plugins/mup/tests/: test_mup_backend.py  test_mup_client.py  test_mup_fixtures.py  test_mup_order_processing.py
plugins/mup/waldur_site_agent_mup/: __init__.py  backend.py  client.py
plugins/opennebula/: README.md  pyproject.toml
plugins/opennebula/docs/saml-setup/: index.md  opennebula-saml-agent-config.yaml
plugins/opennebula/examples/: opennebula-config-saml.yaml  vllm-inference-offering.yaml
plugins/opennebula/tests/: conftest.py  test_backend.py  test_integration.py  test_saml_integration.py  test_saml_integration_e2e.py
plugins/opennebula/tests/e2e/: integration-test-report.md
plugins/opennebula/waldur_site_agent_opennebula/: __init__.py  backend.py  client.py  keycloak_client.py
plugins/rancher/: README.md  __init__.py  pyproject.toml
plugins/rancher-kc-crd/: README.md  pyproject.toml
plugins/rancher-kc-crd/examples/: e2e-localdev-config.yaml  e2e-localdev-setup.sh  rancher-kc-crd-config.yaml
plugins/rancher-kc-crd/tests/: __init__.py  test_backend_integration.py  test_status_reader.py  test_translator.py
plugins/rancher-kc-crd/waldur_site_agent_rancher_kc_crd/: __init__.py  backend.py  crd_client.py  status_reader.py  translator.py
plugins/rancher/examples/: rancher-config-basic.yaml  rancher-config.yaml
plugins/rancher/tests/: __init__.py  test_integration.py  test_keycloak_client.py  test_quota_functionality.py  test_rancher_backend.py  test_rancher_client.py
plugins/rancher/waldur_site_agent_rancher/: __init__.py  backend.py  keycloak_client.py  rancher_client.py
plugins/slurm/: README.md  pyproject.toml
plugins/slurm/docs/: upgrading.md
plugins/slurm/tests/: test_account_hierarchy_integration.py  test_account_parent_integration.py  test_command_construction.py  test_diagnostics.py  test_limit_echo_loop.py  test_membership_sync.py  test_order_processing.py  test_parser.py  test_partition_associations.py  test_prepaid_emulator.py  test_prepaid_limits.py  test_project_reparenting.py  test_reporing.py  test_rest_client.py  test_rest_mode_config.py  test_slurm_bin_path.py  test_timezone.py  test_username_set_race_condition.py
plugins/slurm/waldur_site_agent_slurm/: __init__.py  backend.py  client.py  diagnostic_cli.py  diagnostic_service.py  diagnostics.py  historical_usage_loader.py  interface.py  parser.py  rest_client.py  schemas.py  utils.py
plugins/waldur/: README.md  pyproject.toml
plugins/waldur/tests/: conftest.py  integration_helpers.py  test_backend.py  test_client.py  test_component_mapping.py  test_identity_bridge_integration.py  test_integration.py  test_integration_username_sync.py  test_phantom_user_order_post_process.py  test_target_event_handler.py  test_username_backend.py  test_username_set_identity_bridge.py
plugins/waldur/waldur_site_agent_waldur/: __init__.py  backend.py  client.py  component_mapping.py  enums.py  schemas.py  target_event_handler.py  username_backend.py
(+393 files in other folders)
