[project]
name = "waldur-site-agent-basic-username-management"
version = "0.7.0"
description = "Basic username management plugin for Waldur Site Agent"
readme = "README.md"
authors = [{ name = "OpenNode Team", email = "info@opennodecloud.com" }]
requires-python = ">=3.9, <4"
dependencies = [
    "waldur-site-agent>=0.7.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
waldur-site-agent = { workspace = true }

# Entry points for exporting backends
[project.entry-points."waldur_site_agent.username_management_backends"]
base = "waldur_site_agent_basic_username_management.backend:BaseUsernameManagementBackend"
