[project]
name = "waldur-site-agent-cscs-dwdi"
version = "0.7.0"
description = "CSCS-DWDI reporting plugin for Waldur Site Agent"
readme = "README.md"
authors = [{ name = "OpenNode Team", email = "info@opennodecloud.com" }]
requires-python = ">=3.9, <4"
dependencies = [
    "waldur-site-agent>=0.7.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
waldur-site-agent = { workspace = true }

# Entry points for exporting backends
[project.entry-points."waldur_site_agent.backends"]
cscs-dwdi-compute = "waldur_site_agent_cscs_dwdi.backend:CSCSDWDIComputeBackend"
cscs-dwdi-storage = "waldur_site_agent_cscs_dwdi.backend:CSCSDWDIStorageBackend"
