[project]
name = "waldur-site-agent-digitalocean"
version = "0.1.0"
description = "DigitalOcean plugin for Waldur Site Agent"
readme = "README.md"
authors = [{ name = "OpenNode Team", email = "info@opennodecloud.com" }]
requires-python = ">=3.9, <4"
dependencies = [
    "waldur-site-agent>=0.7.0",
    "python-digitalocean",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
waldur-site-agent = { workspace = true }

# Entry points for exporting backends
[project.entry-points."waldur_site_agent.backends"]
digitalocean = "waldur_site_agent_digitalocean.backend:DigitalOceanBackend"

# Entry points for plugin-specific schema validation
[project.entry-points."waldur_site_agent.component_schemas"]
digitalocean = "waldur_site_agent_digitalocean.schemas:DigitalOceanComponentSchema"

[project.entry-points."waldur_site_agent.backend_settings_schemas"]
digitalocean = "waldur_site_agent_digitalocean.schemas:DigitalOceanBackendSettingsSchema"
