[project]
name = "waldur-site-agent-k8s-ut-namespace"
version = "0.7.0"
description = "Kubernetes UT ManagedNamespace plugin for Waldur Site Agent"
authors = [{ name = "OpenNode Team", email = "info@opennodecloud.com" }]
requires-python = ">=3.9, <4"
dependencies = [
    "waldur-site-agent>=0.7.0",
    "waldur-site-agent-keycloak-client>=0.7.0",
    "kubernetes>=28.0.0,<32.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
waldur-site-agent = { workspace = true }
waldur-site-agent-keycloak-client = { workspace = true }

# Entry points for exporting backends
[project.entry-points."waldur_site_agent.backends"]
k8s-ut-namespace = "waldur_site_agent_k8s_ut_namespace.backend:K8sUtNamespaceBackend"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
]
