[project]
name = "waldur-site-agent-opennebula"
version = "0.7.0"
description = "OpenNebula VDC plugin for Waldur Site Agent"
authors = [{ name = "OpenNode Team", email = "info@opennodecloud.com" }]
requires-python = ">=3.9, <4"
dependencies = [
    "waldur-site-agent>=0.7.0",
    "pyone>=6.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
waldur-site-agent = { workspace = true }

# Entry points for exporting backends
[project.entry-points."waldur_site_agent.backends"]
opennebula = "waldur_site_agent_opennebula.backend:OpenNebulaBackend"

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
  "S101",   # we can (and MUST!) use 'assert' in test files.
  "ANN001", # annotations for fixtures are sometimes a pain for test files
  "PLR2004", # magic values are OK in tests
  "PT011",   # pytest.raises can be broad in tests
  "S106",    # hardcoded passwords are OK in test fixtures
  "ARG002",  # unused arguments from mock decorators are OK
]
