[project]
name = "waldur-site-agent-slurm"
version = "0.7.0"
description = "SLURM plugin for Waldur Site Agent"
readme = "README.md"
authors = [{ name = "OpenNode Team", email = "info@opennodecloud.com" }]
requires-python = ">=3.9, <4"
dependencies = [
    "waldur-site-agent>=0.7.0"
]

[dependency-groups]
dev = [
    "slurm-emulator>=0.0.1",
    "pytest>=7.1.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
waldur-site-agent = { workspace = true }

[project.scripts]
waldur_site_load_historical_usage = "waldur_site_agent_slurm.historical_usage_loader:main"

# Entry points for exporting backends
[project.entry-points."waldur_site_agent.backends"]
slurm = "waldur_site_agent_slurm.backend:SlurmBackend"
